 syntax = "proto3";

 package calculator;

 option go_package="github.com/deepak2107/grpc-go-project/calculator/proto";

 message SumRequest{
    int32 first_num = 1;
    int32 second_num = 2;
 }

 message SumResponse{
    int32 result =1;
 }
